twitter font fix

--- a/app/features/features.css
+++ b/app/features/features.css
@@ -1,7 +1,11 @@
 .twit.header {
   display: none; }
 
-.e-entry-title, .e-entry-title > a {
+.var-narrow .e-entry-title a {
+  color: white;
+  color: rgba(255, 255, 255, 0.95); }
+
+.var-narrow .e-entry-title, .var-narrow .e-entry-title > a {
   font-family: "Titillium Web", sans-serif !important;
   color: white !important;
   font-size: 30px !important;
