--- a/app/features/features.scss
+++ b/app/features/features.scss
@@ -3,7 +3,12 @@
   display: none;
 }
 
-.e-entry-title, .e-entry-title > a {
+.var-narrow .e-entry-title a {
+  color:white;
+  color: rgba(255, 255, 255, .95);
+}
+
+.var-narrow .e-entry-title, .var-narrow .e-entry-title > a {
   font-family: 'Titillium Web', sans-serif!important;
   color:white!important;
   font-size: 30px!important;
