--- a/app/modules/layout/components/footer-directive.tpl.html
+++ b/app/modules/layout/components/footer-directive.tpl.html
@@ -1,19 +1,12 @@
 <div
         class="footer en"
-        ng-init="nav.footer=[
-            {id_num: 843, url:'#/disclaimer', name:'disclaimer'},
-            {id_num: 844, url:'#/tos', name:'terms of use'},
-            {id_num: 845, url:'#/prices', name:'pricing'},
-            {id_num: 846, url:'#/press', name:'press section'},
-            {id_num: 847, url:'#/jobs', name:'jobs'},
-            {id_num: 848, url:'#/meet', name:'meet us'}
-        ]">
+        ng-init="">
     <div class="container">
         <div class="row">
             <span class="col-xs-12 col-sm-2">&copy; 2015 alugha GmbH</span>
             <div class="menu-footer-container">
                 <ul id="menu-footer" class="Navbar_reg col-xs-12 col-sm-7 col-md-8">
-                    <li ng-repeat="link in nav.footer" id="menu-item-{{link.id_num}}" class="menu-item">
+                    <li ng-repeat="link in footer.links" id="menu-item-{{link.id_num}}" class="menu-item">
                         <a ng-href="{{link.url}}">{{link.name | uppercase}}</a>
                     </li>
                 </ul>
