--- a/app/home.scss
+++ b/app/home.scss
@@ -1,5 +1,4 @@
-/*
-@import "/bower_components/bourbon/app/assets/stylesheets/_bourbon.scss";
+@import "bourbon/_bourbon.scss";
 
 .col-md-offset-0 {
   margin-left: 0;
@@ -76,7 +75,7 @@ nav ol, .footer ul, #menu-settings
   font-family:'MF LangQian (Noncommercial)';
 }
 
-/!* Navigation imported from angular app *!/
+/* Navigation imported from angular app */
 $nav-row-height:29px;
 .nav-container {
   padding:0;
@@ -110,18 +109,18 @@ nav.navbar{
     position: fixed;
     left:0;
     right:0;
-    background: rgb(242,242,242); /!* Old browsers *!/
-    background: -moz-linear-gradient(top, rgba(242,242,242,1) 0%, rgba(255,255,255,1) 100%); /!* FF3.6+ *!/
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,242,242,1)), color-stop(100%,rgba(255,255,255,1))); /!* Chrome,Safari4+ *!/
-    background: -webkit-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(255,255,255,1) 100%); /!* Chrome10+,Safari5.1+ *!/
-    background: -o-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(255,255,255,1) 100%); /!* Opera 11.10+ *!/
-    background: -ms-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(255,255,255,1) 100%); /!* IE10+ *!/
-    background: linear-gradient(to bottom, rgba(242,242,242,1) 0%,rgba(255,255,255,1) 100%); /!* W3C *!/
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#ffffff',GradientType=0 ); /!* IE6-9 *!/
+    background: rgb(242,242,242); /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(242,242,242,1) 0%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,242,242,1)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(255,255,255,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgba(242,242,242,1) 0%,rgba(255,255,255,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
     z-index: 10;
     -webkit-font-smooting:antialiased;
-    /!*box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
-    box-shadow: 0px 0px 20px #333;*!/
+    /*box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 20px #333;*/
 
     @media screen and (max-width: 767px) {
       position:absolute;
@@ -134,9 +133,9 @@ nav.navbar{
     left:0;
     right:0;
     height:0px;
-    /!*background: url('../images/shadow-top.png');
+    /*background: url('../images/shadow-top.png');
     background-repeat: repeat-x;
-    opacity: 0.3;*!/
+    opacity: 0.3;*/
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.7);
     z-index: 4;
   }
@@ -281,14 +280,14 @@ nav.navbar{
       list-style-type: none;
       transition:height 0.4s ease-in-out, padding 0.7s ease-in-out;
 
-      background: rgb(242,242,242); /!* Old browsers *!/
-      background: -moz-linear-gradient(bottom, rgba(242,242,242,1) 0%, rgba(251,251,251,1) 100%); /!* FF3.6+ *!/
-      background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(242,242,242,1)), color-stop(100%,rgba(251,251,251,1))); /!* Chrome,Safari4+ *!/
-      background: -webkit-linear-gradient(bottom, rgba(242,242,242,1) 0%,rgba(251,251,251,1) 100%); /!* Chrome10+,Safari5.1+ *!/
-      background: -o-linear-gradient(bottom, rgba(242,242,242,1) 0%,rgba(251,251,251,1) 100%); /!* Opera 11.10+ *!/
-      background: -ms-linear-gradient(bottom, rgba(242,242,242,1) 0%,rgba(251,251,251,1) 100%); /!* IE10+ *!/
-      background: linear-gradient(to top, rgba(242,242,242,1) 0%,rgba(251,251,251,1) 100%); /!* W3C *!/
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2f2f2',GradientType=0 ); /!* IE6-9 *!/
+      background: rgb(242,242,242); /* Old browsers */
+      background: -moz-linear-gradient(bottom, rgba(242,242,242,1) 0%, rgba(251,251,251,1) 100%); /* FF3.6+ */
+      background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(242,242,242,1)), color-stop(100%,rgba(251,251,251,1))); /* Chrome,Safari4+ */
+      background: -webkit-linear-gradient(bottom, rgba(242,242,242,1) 0%,rgba(251,251,251,1) 100%); /* Chrome10+,Safari5.1+ */
+      background: -o-linear-gradient(bottom, rgba(242,242,242,1) 0%,rgba(251,251,251,1) 100%); /* Opera 11.10+ */
+      background: -ms-linear-gradient(bottom, rgba(242,242,242,1) 0%,rgba(251,251,251,1) 100%); /* IE10+ */
+      background: linear-gradient(to top, rgba(242,242,242,1) 0%,rgba(251,251,251,1) 100%); /* W3C */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
 
       &.isActive {
         height:182px;
@@ -451,10 +450,10 @@ nav.navbar{
     z-index: 9;
     transition: transform 0.5s ease-out;
 
-    /!*&.isActive {
+    /*&.isActive {
       transform: translate(0, 86px);
       -webkit-transform: translate(0, 86px);
-    }*!/
+    }*/
 
     @media screen and (max-width: 767px) {
       position:absolute;
@@ -631,13 +630,13 @@ nav.navbar{
         }
 
         .btn-google {
-          background: -moz-linear-gradient(top, rgba(209,72,54,0.7) 0%, rgba(209,72,54,1) 100%); /!* FF3.6+ *!/
-          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(209,72,54,0.7)), color-stop(100%,rgba(209,72,54,1))); /!* Chrome,Safari4+ *!/
-          background: -webkit-linear-gradient(top, rgba(209,72,54,0.7) 0%,rgba(209,72,54,1) 100%); /!* Chrome10+,Safari5.1+ *!/
-          background: -o-linear-gradient(top, rgba(209,72,54,0.7) 0%,rgba(209,72,54,1) 100%); /!* Opera 11.10+ *!/
-          background: -ms-linear-gradient(top, rgba(209,72,54,0.7) 0%,rgba(209,72,54,1) 100%); /!* IE10+ *!/
-          background: linear-gradient(to bottom, rgba(209,72,54,0.7) 0%,rgba(209,72,54,1) 100%); /!* W3C *!/
-          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3d14836', endColorstr='#d14836',GradientType=0 ); /!* IE6-9 *!/
+          background: -moz-linear-gradient(top, rgba(209,72,54,0.7) 0%, rgba(209,72,54,1) 100%); /* FF3.6+ */
+          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(209,72,54,0.7)), color-stop(100%,rgba(209,72,54,1))); /* Chrome,Safari4+ */
+          background: -webkit-linear-gradient(top, rgba(209,72,54,0.7) 0%,rgba(209,72,54,1) 100%); /* Chrome10+,Safari5.1+ */
+          background: -o-linear-gradient(top, rgba(209,72,54,0.7) 0%,rgba(209,72,54,1) 100%); /* Opera 11.10+ */
+          background: -ms-linear-gradient(top, rgba(209,72,54,0.7) 0%,rgba(209,72,54,1) 100%); /* IE10+ */
+          background: linear-gradient(to bottom, rgba(209,72,54,0.7) 0%,rgba(209,72,54,1) 100%); /* W3C */
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3d14836', endColorstr='#d14836',GradientType=0 ); /* IE6-9 */
 
           &:hover {
             background-color:#c13e2c;
@@ -646,13 +645,13 @@ nav.navbar{
         }
 
         .btn-facebook{
-          background: -moz-linear-gradient(top, rgba(59,87,157,0.7) 0%, rgba(59,87,157,1) 100%); /!* FF3.6+ *!/
-          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(59,87,157,0.7)), color-stop(100%,rgba(59,87,157,1))); /!* Chrome,Safari4+ *!/
-          background: -webkit-linear-gradient(top, rgba(59,87,157,0.7) 0%,rgba(59,87,157,1) 100%); /!* Chrome10+,Safari5.1+ *!/
-          background: -o-linear-gradient(top, rgba(59,87,157,0.7) 0%,rgba(59,87,157,1) 100%); /!* Opera 11.10+ *!/
-          background: -ms-linear-gradient(top, rgba(59,87,157,0.7) 0%,rgba(59,87,157,1) 100%); /!* IE10+ *!/
-          background: linear-gradient(to bottom, rgba(59,87,157,0.7) 0%,rgba(59,87,157,1) 100%); /!* W3C *!/
-          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b33b579d', endColorstr='#3b579d',GradientType=0 ); /!* IE6-9 *!/
+          background: -moz-linear-gradient(top, rgba(59,87,157,0.7) 0%, rgba(59,87,157,1) 100%); /* FF3.6+ */
+          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(59,87,157,0.7)), color-stop(100%,rgba(59,87,157,1))); /* Chrome,Safari4+ */
+          background: -webkit-linear-gradient(top, rgba(59,87,157,0.7) 0%,rgba(59,87,157,1) 100%); /* Chrome10+,Safari5.1+ */
+          background: -o-linear-gradient(top, rgba(59,87,157,0.7) 0%,rgba(59,87,157,1) 100%); /* Opera 11.10+ */
+          background: -ms-linear-gradient(top, rgba(59,87,157,0.7) 0%,rgba(59,87,157,1) 100%); /* IE10+ */
+          background: linear-gradient(to bottom, rgba(59,87,157,0.7) 0%,rgba(59,87,157,1) 100%); /* W3C */
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b33b579d', endColorstr='#3b579d',GradientType=0 ); /* IE6-9 */
 
           &:hover {
             background-color:#344d8a;
@@ -672,10 +671,10 @@ nav.navbar{
   transform: translate(0,-100%)!important;
   -webkit-transform: translate(0, -100%)!important;
 }
-/!* end import from angular app
+/* end import from angular app
 
 
-/!* Disable Browser Button Style *!/
+/* Disable Browser Button Style */
 .btn_single_img
 {
   border:none;
@@ -931,7 +930,7 @@ nav.navbar{
       top:0;
       bottom: 0;
       left: 60%;
-      /!* Nur Firefox *!/
+      /* Nur Firefox */
       @-moz-document url-prefix() {
         bottom:1px;
       }
@@ -1036,7 +1035,7 @@ nav.navbar{
     @media screen and (max-width: 410px) {
       margin-top:40px;
     }
-    /!*Webkit specific*!/
+    /*Webkit specific*/
     @media screen and (-webkit-min-device-pixel-ratio:0) and (max-width: 768px)
     {
       ::i-block-chrome, > .centered > h3
@@ -1509,7 +1508,7 @@ span.letterpress {
 {
   content:"";
   display: block;
-  padding-top: 56.25%; /!* 16/9 ratio *!/
+  padding-top: 56.25%; /* 16/9 ratio */
 }
 
 .video-container> iframe
@@ -1534,7 +1533,7 @@ span.letterpress {
 
   width: 100%;
 
-  /!* begin below fixed navbar *!/
+  /* begin below fixed navbar */
   height: 90%;
   top: 86px;
   height:calc(100% - 86px);
@@ -1546,7 +1545,7 @@ span.letterpress {
 {
   content:"";
   display: block;
-  padding-top: 56.25%; /!* 16/9 ratio *!/
+  padding-top: 56.25%; /* 16/9 ratio */
 }
 
 .header-video {
@@ -1593,12 +1592,12 @@ span.letterpress {
     }
   }
 
-  /!*&:hover .info {
+  /*&:hover .info {
     transform: translateY(0);
-  }*!/
+  }*/
 }
 
-/!* Custom page footer *!/
+/* Custom page footer */
 .footer {
   clear:both;
   padding:10px;
@@ -1670,7 +1669,7 @@ span.letterpress {
   background-image: url(/images/header-notext.jpg);
   text-shadow: none;
   color:#F0F0F0;
-  padding-top:100px; /!* height of navbar *!/
+  padding-top:100px; /* height of navbar */
 
   .header-main
   {
@@ -1793,13 +1792,13 @@ span.letterpress {
   line-height: 1.1;
   //letter-spacing: -1px;
 
-  /!*@media screen and (min-width: 768px) {
+  /*@media screen and (min-width: 768px) {
     font-size: 2.75em;
   }
 
   @media screen and (min-width: 992px) {
     margin-top: 120px;
-  }*!/
+  }*/
 }
 
 .page {
@@ -1847,9 +1846,9 @@ span.letterpress {
   }
 }
 
-/!* Responsive: Portrait tablets and up *!/
+/* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  /!* Remove the padding we set earlier *!/
+  /* Remove the padding we set earlier */
   .header,
   .footer {
     padding-left: 0;
@@ -1863,7 +1862,7 @@ span.letterpress {
 }
 
 
-/!* Override B3 .panel adding a subtly transparent background *!/
+/* Override B3 .panel adding a subtly transparent background */
 
 
 .margin-base-vertical {
@@ -1966,7 +1965,7 @@ strong {
   }
 }
 
-/!* Media Queries *!/
+/* Media Queries */
 
 @media screen and (max-width: 1070px)
 {
@@ -2498,10 +2497,10 @@ strong {
   min-height: 255px;
 
 }
-/!*
+/*
 @import 'tour';
 @import 'bouncing-arrow';
-*!/
+*/
 // Bouncing Arrow
 @include keyframes(bounce) {
   0%, 20%, 50%, 80%, 100% {
@@ -2621,7 +2620,7 @@ strong {
   display: none;
 }
 
-/!* Media Queries *!/
+/* Media Queries */
 @media screen and (max-width: 430px) {
 
   .e-entry-title, .e-entry-title > a
@@ -2639,4 +2638,3 @@ strong {
   }
 }
 
-*/
