--- a/app/modules/home/components/benefits-directive.tpl.html
+++ b/app/modules/home/components/benefits-directive.tpl.html
@@ -22,7 +22,7 @@
         <div class="col-xs-12 col-sm-10 col-sm-offset-1 showcase_link_row">
             <a href="/demo" class="col-xs-12 col-sm-5 btn btn-std">TRY IT OUT!</a>
             <div class="col-xs-12 col-sm-2"><h5>OR</h5></div>
-            <a href="/tour" class="col-xs-12 col-sm-5 btn btn-std">START A TOUR!</a>
+            <a href="#/tour" class="col-xs-12 col-sm-5 btn btn-std">START A TOUR!</a>
         </div>
     </div>
 </div>
